--- a/jQuery/jQuery.html
+++ b/jQuery/jQuery.html
@@ -18,7 +18,7 @@
                 </body>"
             );
             $("#2").css({"color" : "blue"});
-            $("#3").css(function() {
+            $("#3").click(function() {
                 $("h1").hide();
             });
         });
